--- a/script.html
+++ b/script.html
@@ -12,6 +12,7 @@
         <li>Home</li>
         <li>About</li>
         <li>Services</li>
+        <li>Parvez</li>
     </ul>
     <script>
         document.getElementById("menu").addEventListener("click", function (event) {
